name:                jude-web
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Jude Taylor
maintainer:          me@jude.bio
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     JudeWeb
  other-modules:       API
                       HTMLRendering
                       Models
                       Models.SessionData
                       Pages.Edit
                       Pages.Forms
                       Pages.Home
                       Pages.Login
                       Pages.Single
                       StaticFiles
  build-depends:       base >= 4.7
                     , acid-state
                     , aeson
                     , blaze-html
                     , blaze-markup
                     , bytestring
                     , cereal
                     , clientsession
                     , cookie
                     , digestive-functors
                     , either
                     , file-embed
                     , filepath
                     , highlighter
                     , http-media
                     , http-types
                     , ixset
                     , markdown
                     , mtl
                     , network-uri
                     , pcre-light
                     , pwstore-fast
                     , safecopy
                     , servant
                     , servant-server
                     , shakespeare
                     , text
                     , template-haskell
                     , time
                     , transformers
                     , utf8-string
                     , vault
                     , wai
                     , wai-app-static
                     , wai-extra
                     , wai-session
                     , wai-session-clientsession
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

executable jude-web
  build-depends:       base, jude-web, wai-extra, warp
  main-is:             Main.hs
  hs-source-dirs:      exe
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded
