name:                jude-web
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Jude Taylor
maintainer:          me@jude.bio
category:            Web
build-type:          Simple
cabal-version:       >=1.10

Flag opt
  default:     False
  manual:      True
  description: Build with optimizations

library
  exposed-modules:     JudeWeb
  other-modules:       API
                       API.Docs
                       API.PageTypes
                       Combinators
                       HTMLRendering
                       Models
                       Models.SessionData
                       Pages.Edit
                       Pages.Forms
                       Pages.Home
                       Pages.Login
                       Pages.New
                       Pages.Single
                       StaticFiles
  build-depends:       base >= 4.7
                     , acid-state
                     , aeson
                     , blaze-html
                     , blaze-markup
                     , bytestring
                     , cereal
                     , clientsession
                     , cookie
                     , digestive-functors
                     , digestive-functors-blaze
                     , file-embed
                     , filepath
                     , highlighter
                     , http-media
                     , http-types
                     , ixset
                     , markdown
                     , mtl
                     , network-uri
                     , pcre-light
                     , pwstore-fast
                     , safecopy
                     , servant
                     , servant-docs
                     , servant-server
                     , shakespeare
                     , text
                     , template-haskell
                     , time
                     , transformers
                     , utf8-string
                     , vault
                     , wai
                     , wai-app-static
                     , wai-extra
                     , wai-session
                     , wai-session-clientsession
  hs-source-dirs:      src
  default-language:    Haskell2010
  if flag(opt)
    ghc-options:       -Wall -Werror -O2
  else
    ghc-options:       -Wall -O0

executable jude-web
  build-depends:       base, jude-web, wai-extra, warp
  main-is:             Main.hs
  hs-source-dirs:      exe
  default-language:    Haskell2010
  ghc-options:         -threaded
  if flag(opt)
    ghc-options:       -Wall -Werror -O2 -rtsopts -with-rtsopts=-N
  else
    ghc-options:       -Wall -O0
